--- a/about.html
+++ b/about.html
@@ -7,50 +7,47 @@
     <h3>EMBODIED ABSTRACTION</h3>
   </div>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As Rus explains, researchers studying reconfigurable robots have long used an abstraction called the sliding-cube model. In this model, if two cubes are face to face, one of them can slide up the side of the other and, without changing orientation, slide across its top.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dupa explicațiile lui Rus, cercetătorii ce studiază roboți reconfigurabili au folosit timp îndelungat o abstractie numită “cuburi-alunecatoare”. 
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The sliding-cube model simplifies the development of self-assembly algorithms, but the robots that implement them tend to be much more complex devices. Rus’ group, for instance, previously developed a modular robot called the Molecule, which consisted of two cubes connected by an angled bar and had 18 separate motors. “We were quite proud of it at the time,” Rus says.</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;În acest model, dacă doua cuburi sunt puse fața in fața, unul din ele poate aluneca pe o parte a celuilalt cub și, fără o schimbare a orientării, poate aluneca chiar deasupra.</p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;According to Gilpin, existing modular-robot systems are also “statically stable,” meaning that “you can pause the motion at any point, and they’ll stay where they are.” What enabled the MIT researchers to drastically simplify their robots’ design was giving up on the principle of static stability.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Modelul cubului alunecător simplifică dezvoltarea algoritmilor  auto-asamblatori, dar roboții ce îi implementează tind să fie dispozitive mult mai complexe. Echipa lui Rus, de exemplu, a dezvoltat în prealabil un robot modular numit Molecule, ce constă în două cuburi conectate cu ajutorul unei bare înclinate ce avea 18 motoare separate. “Am fost destul de mândri la vremea aceea” spuse Rus.
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“There’s a point in time when the cube is essentially flying through the air,” Gilpin says. “And you are depending on the magnets to bring it into alignment when it lands. That’s something that’s totally unique to this system.”
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Conform spuselor lui Giplin, existența sistemelor de roboți modulari este “Statistic stabilă”, însemnând ca poți pune pauză mișcării în orice punct și ei vor sta unde sunt. Ceea ce a încurajat cercetatorii MIT să simplifice drastic design-ul roboților a fost renunțarea la principiul stabilității statice.
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;That’s also what made Rus skeptical about Romanishin’s initial proposal. “I asked him build a prototype,” Rus says. “Then I said, ‘OK, maybe I was wrong.’ ”
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“Există un punct în timp unde cubul pur și simplu zboară prin aer” spune Giplin “ Atunci te bazezi pe magneți pentru aliniere in locul unde aterizează. Acest lucru este unic acestui sistem”
 </p>
 
   <div id="wh40k_chapter">
     <h3>STICKING THE LANDING</h3>
   </div>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To compensate for its static instability, the researchers’ robot relies on some ingenious engineering. On each edge of a cube are two cylindrical magnets, mounted like rolling pins. When two cubes approach each other, the magnets naturally rotate, so that north poles align with south, and vice versa. Any face of any cube can thus attach to any face of any other.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pentru a compensa instabilitatea statică, cercetatorii s-au bazat pe o inginerie ingenioasă. Pe fiecare margine a cubului, sunt montați 2 magneti cilindrici . Când 2 cuburi se apropie unul de celălat, magneții se rotesc, ca polul S să se alinieze cu polul N și vice versa. Așa că fiecare fața a fiecarui cub se poate atașa de o alta față.
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The cubes’ edges are also beveled, so when two cubes are face to face, there’s a slight gap between their magnets. When one cube begins to flip on top of another, the bevels, and thus the magnets, touch. The connection between the cubes becomes much stronger, anchoring the pivot. On each face of a cube are four more pairs of smaller magnets, arranged symmetrically, which help snap a moving cube into place when it lands on top of another.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Marginile cuburilor sunt deasemenea conice, asă că atunci când 2 cuburi sunt puse față în față exista un mic spațiu între magneți. Când un cub începe să urce deasupra celuilalt cub, marginile, respective  se ating. Astfel conexiunea dintre cuburi devine mult mai puternică, ancorând pivotarea. Pe fiecare față a cubului exista alte 4 perechi de magneti similari, aranjati simetric, lucru ce ajută la centrarea unui cub cand aterizează deaspura altui cub.
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As with any modular-robot system, the hope is that the modules can be miniaturized: the ultimate aim of most such research is hordes of swarming microbots that can self-assemble, like the “liquid steel” androids in the movie “Terminator II.” And the simplicity of the cubes’ design makes miniaturization promising.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ca orice alt sistem de roboți-modulari , speranța este aceea că modulele să fie aduse la forma lor miniaturală . “Cel mai mareț scop al acestei cercetării este o hoardă de microroboți ce se pot auto-asambla, ca un “oțel-lichid".
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;But the researchers believe that a more refined version of their system could prove useful even at something like its current scale. Armies of mobile cubes could temporarily repair bridges or buildings during emergencies, or raise and reconfigure scaffolding for building projects. They could assemble into different types of furniture or heavy equipment as needed. And they could swarm into environments hostile or inaccessible to humans, diagnose problems, and reorganize themselves to provide solutions.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dar cercatatorii  cred că o versiune mai rafinată a sistemului se poate dovedi folositoare chiar si la scara actuala . O armata de cuburi mobile poate repara temporar poduri sau clădiri sau pot reconfigura schelele pentru proiectarea unor cladiri. Pot asambla diferite tipuri de mobile sau echipament greu la nevoie . 
 </p>
 
   <div id="wh40k_chapter">
     <h3>STRENGTH IN DIVERSITY</h3>
   </div>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The researchers also imagine that among the mobile cubes could be special-purpose cubes, containing cameras, or lights, or battery packs, or other equipment, which the mobile cubes could transport. “In the vast majority of other modular systems, an individual module cannot move on its own,” Gilpin says. “If you drop one of these along the way, or something goes wrong, it can rejoin the group, no problem.”
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cercetatorii și-au imaginat că printre cuburile mobile pot exista și cuburi cu întrebuințare specială, conținând o camera sau lumini, baterii sau diferite tipuri de echipament, ce pot fi transportate de aceste cuburi. 
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“It’s one of those things that you kick yourself for not thinking of,” Cornell’s Lipson says. “It’s a low-tech solution to a problem that people have been trying to solve with extraordinarily high-tech approaches.”
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;De-a lungul muncii, cercetatorii MIT au construit o armată de 100 de cuburi, fiecare putând fi deplasat în orice direcție, și un algoritm proiectat să le ghideze.
 </p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“What they did that was very interesting is they showed several modes of locomotion,” Lipson adds. “Not just one cube flipping around, but multiple cubes working together, multiple cubes moving other cubes — a lot of other modes of motion that really open the door to many, many applications, much beyond what people usually consider when they talk about self-assembly. They rarely think about parts dragging other parts — this kind of cooperative group behavior.”
-</p>
-
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In ongoing work, the MIT researchers are building an army of 100 cubes, each of which can move in any direction, and designing algorithms to guide them. “We want hundreds of cubes, scattered randomly across the floor, to be able to identify each other, coalesce, and autonomously transform into a chair, or a ladder, or a desk, on demand,” Romanishin says.
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“Vrem sute de cuburi, împarstiate aleatoriu pe podea, să fie capabile să se identifice și să se transforme automat într-un scaun, scară sau orice altceva  la cerere” spuse Romanshin.
 </p>
 
 </div>
