--- a/tech.html
+++ b/tech.html
@@ -7,7 +7,7 @@
     <h3>OVERVIEW</h3>
   </div>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M-Block are magnetically-bonded, angular momentum-actuated modular robots. They are 50 mm cubes are autonomous robots that have no external actuated moving parts, and no tethers. The modules are capable of pivoting about their edges using inertial force actuation. A flywheel located inside the module, (oriented in the plane of the intended motion), is used to store angular momentum before a braking mechanism is used to decelerate the flywheel and, during a short duration, exert a high torque on the module. If this torque is sufficiently high, the module breaks its magnetic bonds with its neighbors and pivots into a new location.</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M-blocks sunt roboti modulari, acționati magnetic . Sunt cuburi de 50mm autonome ce nu au parți exterioare mobile sau legaturi. Modulele sunt capabile sa pivoteze pe muchii , fiind acționate de forța inerțială. O volantă aflată în interiorul modului( orientată in planul miscarii) este folosită pentru a înmagazina moment unghiular,  apoi un mecanism de frânare este folosit sa decelereze  volanta, iar pentru o scurta durată, exercită un cuplu asupra modulului. Dacă cuplul este suficient de mare , modulul va rupe legăturile magnetice și va pivota spre noua locație.</p>
 
   <img src="ang_mom_schematic.svg" alt="M-BLOCK" style="float: center !important; margin-left:auto; margin-right:auto; display: block;">
 
@@ -17,11 +17,11 @@
 
   <img id="spec_img" src="mblock_sbs_sch_pic.jpg" alt="M-BLOCK" style="float: center !important; margin-left:auto; margin-right:auto; display: block;">
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• The actuation is provided by a flywheel inside the cube that can reach up to 20000 revolutions per minute</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Acționarea este  prevăzută de o volanta ce poate atinge 20.000 rotatii/minut.</p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• On each face there are 8 magnets to snap cubes into place.</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Pe fiecare fața a cubului exista 8 magneți</p>
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• On each edge there are 2 magnets that are free to spin along the axis of the edge that provide a pivoting line for the angular momentum / torque.</p>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Pe fiecare margine există 2 magneți ce se pot roti de-a lungul axei marginii,  ce furnizează o linie de pivotare pentru momentul unghiular/cuplu .</p>
 
   <div id="wh40k_chapter">
     <h3>DEMO</h3>
